--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 <button class="btn btn-warning text-white fs-5 py-2 px-4" type="button">S'inscrire à notre liste email</button></a></div></div></section>
                                 
 
-                                <div class="toast align-items-center text-white border-0 position-absolute top-0 end-0 bg-success" id="messageContainer" role="alert" aria-live="assertive" aria-atomic="true">
+                                <div class="toast align-items-center text-white border-0 position-absolute top-0 end-0 bg-*" id="messageContainer" role="alert" aria-live="assertive" aria-atomic="true">
                                     <div class="d-flex">
                                       <div class="toast-body">
                                        <div id="messageResponse"></div>
